syntax = "proto3";
package health_check;

message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
}

service HealthCheck {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}